{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 78,
  "lineage": "164d03ab-25b4-4d2c-c330-b89510d04d35",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interfaceredevm-airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-airflow",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/publicIPAddresses/ippublico-airflow",
                "subnet_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/virtualNetworks/vnet-1368363/subnets/subnet-1368363"
              }
            ],
            "location": "eastus",
            "mac_address": "00-22-48-2D-77-9F",
            "name": "cardinterface-airflow",
            "private_ip_address": "10.0.0.5",
            "private_ip_addresses": [
              "10.0.0.5"
            ],
            "resource_group_name": "rg-1368363",
            "virtual_machine_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Compute/virtualMachines/VmLinuxAirflowDataHub1368363"
          },
          "dependencies": [
            "azurerm_public_ip.ippublico-airflow",
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interfaceredevm-dremio",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-dremio",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.6",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/publicIPAddresses/ippublico-dremio",
                "subnet_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/virtualNetworks/vnet-1368363/subnets/subnet-1368363"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-FE-89-07",
            "name": "cardinterface-dremio",
            "private_ip_address": "10.0.0.6",
            "private_ip_addresses": [
              "10.0.0.6"
            ],
            "resource_group_name": "rg-1368363",
            "virtual_machine_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Compute/virtualMachines/VmLinuxDremio1368363"
          },
          "dependencies": [
            "azurerm_public_ip.ippublico-dremio",
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "interfaceredevm-kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-kakfa",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/publicIPAddresses/ippublico-kafka",
                "subnet_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/virtualNetworks/vnet-1368363/subnets/subnet-1368363"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-8A-90-A3",
            "name": "cardinterface-kakfa",
            "private_ip_address": "10.0.0.4",
            "private_ip_addresses": [
              "10.0.0.4"
            ],
            "resource_group_name": "rg-1368363",
            "virtual_machine_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Compute/virtualMachines/VmLinuxKafa1368363"
          },
          "dependencies": [
            "azurerm_public_ip.ippublico-kafka",
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "associa-grupo-recursos-vm-airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-airflow|/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363",
            "network_interface_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-airflow",
            "network_security_group_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363"
          },
          "dependencies": [
            "azurerm_network_interface.interfaceredevm-airflow",
            "azurerm_network_security_group.securitygroup-aulas",
            "azurerm_public_ip.ippublico-airflow",
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_machine.vm-linux-airflow",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "associa-grupo-recursos-vm-dremio",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-dremio|/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363",
            "network_interface_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-dremio",
            "network_security_group_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363"
          },
          "dependencies": [
            "azurerm_network_interface.interfaceredevm-dremio",
            "azurerm_network_security_group.securitygroup-aulas",
            "azurerm_public_ip.ippublico-dremio",
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_machine.vm-linux-dremio",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "associa-grupo-recursos-vm-kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-kakfa|/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363",
            "network_interface_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkInterfaces/cardinterface-kakfa",
            "network_security_group_id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363"
          },
          "dependencies": [
            "azurerm_network_interface.interfaceredevm-kafka",
            "azurerm_network_security_group.securitygroup-aulas",
            "azurerm_public_ip.ippublico-kafka",
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_machine.vm-linux-kafka",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "securitygroup-aulas",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363",
            "location": "eastus",
            "name": "securitygroup-1368363",
            "resource_group_name": "rg-1368363",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [
                  "177.140.145.89"
                ],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "regraportahttp",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "regraportassh",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "177.140.145.89"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Aluno": "Marcus Antonio Tavare Gomes",
              "Disciplina": "PREPARAÇÃO E INTEGRAÇÃO DE DADOS",
              "Email": "1368363@sga.pucminas.br",
              "Matrícula": "1368363",
              "Professor": "Victor Sales Silva"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "inboundrole-aulas",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363/securityRules/regraportassh",
            "name": "regraportassh",
            "network_security_group_name": "securitygroup-1368363",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "rg-1368363",
            "source_address_prefix": "",
            "source_address_prefixes": [
              "177.140.145.89"
            ],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-aulas",
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "outboundrole-aulas",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "",
            "destination_address_prefixes": [
              "177.140.145.89"
            ],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Outbound",
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/networkSecurityGroups/securitygroup-1368363/securityRules/regraportahttp",
            "name": "regraportahttp",
            "network_security_group_name": "securitygroup-1368363",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "rg-1368363",
            "source_address_prefix": "VirtualNetwork",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.securitygroup-aulas",
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ippublico-airflow",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/publicIPAddresses/ippublico-airflow",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.90.96.10",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ippublico-airflow",
            "resource_group_name": "rg-1368363",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ippublico-dremio",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/publicIPAddresses/ippublico-dremio",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.90.96.65",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ippublico-dremio",
            "resource_group_name": "rg-1368363",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "ippublico-kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/publicIPAddresses/ippublico-kafka",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.226.20.9",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "ippublico-kafka",
            "resource_group_name": "rg-1368363",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_subnet.subrede-aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subrede-aulas",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/virtualNetworks/vnet-1368363/subnets/subnet-1368363",
            "name": "subnet-1368363",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-1368363",
            "virtual_network_name": "vnet-1368363"
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup_aulas",
            "azurerm_virtual_network.network-aulas"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "network-aulas",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "08ea0fa3-2086-4a4a-9824-5cefe8e0ba33",
            "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/virtualNetworks/vnet-1368363",
            "location": "eastus",
            "name": "vnet-1368363",
            "resource_group_name": "rg-1368363",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/4a6139e2-f4bc-456d-89ba-c63055f3a97e/resourceGroups/rg-1368363/providers/Microsoft.Network/virtualNetworks/vnet-1368363/subnets/subnet-1368363",
                "name": "subnet-1368363"
              }
            ],
            "tags": {
              "Aluno": "Marcus Antonio Tavare Gomes",
              "Disciplina": "PREPARAÇÃO E INTEGRAÇÃO DE DADOS",
              "Email": "1368363@sga.pucminas.br",
              "Matrícula": "1368363",
              "Professor": "Victor Sales Silva"
            }
          },
          "dependencies": [
            "azurerm_resource_group.resourcegroup_aulas"
          ]
        }
      ]
    }
  ]
}